feat: Implement core navigation and layout components
Refactors the application to introduce a new navigation structure with desktop sidebar and mobile dock components. Enhances the main layout to accommodate these new navigation elements.

Introduces new icons and expands the use of the `lucide-react` library. Adds initial support for achievements and sounds, laying the groundwork for future gamification features.

Updates `index.html` to include styles for smooth scrolling and to manage the viewport more effectively on mobile devices.

Updates `utils.ts` to include `play` sound functionality and minor refactors.

Updates `games/SayItMode.tsx` to integrate the new speech recognition hook and sound playing utility.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Kids Flashcards</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
+    /* Smooth scrolling */
+    html {
+        scroll-behavior: smooth;
+    }
+  </style>
   <script type="importmap">
   {
     "imports": {
